--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/scripts.js" defer></script>
+  <link rel="shortcut icon" href="img/fcs.ico" type="image/x-icon">
   <title>Clima agora!</title>
   <!-- fontes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
